--- a/source/jodoh.html
+++ b/source/jodoh.html
@@ -21,13 +21,13 @@
 
         @media (min-width: 768px) {
             body {
-                background-image: url('media/dekstop.jpg');
+                background-image: url('../media/dekstop.jpg');
             }
         }
 
         @media (max-width: 767px) {
             body {
-                background-image: url('media/mobile.jpg');
+                background-image: url('../media/mobile.jpg');
             }
         }
 
