--- a/source/jodoh.html
+++ b/source/jodoh.html
@@ -162,8 +162,8 @@
     <div class="sidebar-btn" onclick="openSidebar()">☰</div>
     <!-- Menu Sidebar -->
     <div id="sidebar-menu" class="sidebar-menu">
-        <a href="/khodam.html" onclick="closeSidebar()">Cek Khodam</a>
-        <a href="/tolol.html" onclick="closeSidebar()">Cek Tolol</a>
+        <a href="/source/khodam.html" onclick="closeSidebar()">Cek Khodam</a>
+        <a href="/source/tolol.html" onclick="closeSidebar()">Cek Tolol</a>
         <a href="../jodoh.json" onclick="closeSidebar()">Doc</a>
         <a href="https://wa.me/+62895369461071" onclick="closeSidebar()">Contact</a>
     </div>
