--- a/source/khodam.html
+++ b/source/khodam.html
@@ -184,7 +184,7 @@
 
 <div class="sidebar-content" id="sidebarContent">
     <a href="/cek-khodam/source/jodoh.html">Cek Jodoh</a>
-    <a href="tolol.html">Cek Tolol</a>
+    <a href="/source/tolol.html">Cek Tolol</a>
     <a href="../index.html">Beranda</a>
 </div>
 
