--- a/source/khodam.html
+++ b/source/khodam.html
@@ -183,7 +183,7 @@
 </div>
 
 <div class="sidebar-content" id="sidebarContent">
-    <a href="/cek-khodam/source/jodoh.html">Cek Jodoh</a>
+    <a href="/source/jodoh.html">Cek Jodoh</a>
     <a href="/source/tolol.html">Cek Tolol</a>
     <a href="../index.html">Beranda</a>
 </div>
