--- a/source/khodam.html
+++ b/source/khodam.html
@@ -183,8 +183,8 @@
 </div>
 
 <div class="sidebar-content" id="sidebarContent">
-    <a href="/source/jodoh.html">Cek Jodoh</a>
-    <a href="/source/tolol.html">Cek Tolol</a>
+    <a href="../source/jodoh.html">Cek Jodoh</a>
+    <a href="../source/tolol.html">Cek Tolol</a>
     <a href="../index.html">Beranda</a>
 </div>
 
